devops/base/dispute-api/deploy.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: dispute-api
    component: api
  name: dispute-api
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    name: dispute-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dispute-api
  namespace: 0198bb-dev
spec:
  selector:
    matchLabels:
      app: dispute-api
  template:
    metadata:
      labels:
        app: dispute-api
    spec:
      containers:
        - name: dispute-api
          image: image-registry.openshift-image-registry.svc:5000/0198bb-tools/dispute-api:latest
          ports:
            - containerPort: 8080
